deployments/kubernetes/python/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab-python-test
  labels:
    app: python-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-test
  template:
    metadata:
      labels:
        app: python-test
    spec:
      securityContext:
          runAsUser: 1002
          runAsGroup: 1002
          #fsGroup: 2000
      volumes:
        - name: python-test-storage
          persistentVolumeClaim:
            claimName: python-test-pvc
      containers:
      - name: python-test
        image: ruanbekker/vscode-server:python
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
        volumeMounts:
          - mountPath: "/home/coder/workspace"
            name: python-test-storage
        resources:
          limits:
            cpu: "1"
            memory: "256Mi"
          requests:
            cpu: 500m
            memory: "128Mi"
        #command: [ "sh", "-c", "sleep 1h" ]
---
apiVersion: v1
kind: Service
metadata:
  name: python-test-svc
  namespace: default
spec:
  ports:
  - name: http
    targetPort: 8080
    port: 80
  selector:
    app: python-test
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: python-test
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.backend.loadbalancer.stickiness: "true"
spec:
  rules:
  - host: 127.0.0.1.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: python-test-svc
          servicePort: http
